# Assignment3

Client/: CMakeLists.txt  makefile  readme.txt
Client/header/: BgsEncoderDecoder.h  ConnectionHandler.h
Client/include/: BGSEncoderDecoder.h  BgsEncoderDecoder.h
Client/src/: BGSEncoderDecoder.cpp  BGSclient.cpp  BgsEncoderDecoder.cpp  ConnectionHandler.cpp
Server/src/main/java/bgu/spl/net/api/bidi/: BGSProtocol.java  LineMessageEncoderDecoder.java  UsersInfo.java
Server/src/main/java/bgu/spl/net/impl/echo/: EchoProtocol.java  EchoServerMain.java  LineMessageEncoderDecoder.java
Server/src/main/java/bgu/spl/net/impl/newsfeed/: NewsFeedServerMain.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  Reactor.java
Server/src/main/java/bgu/spl/net/srv/bidi/: BaseServer.java  BgsServerMain.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java
src/main/java/bgu/spl/net/api/bidi/: BGSProtocol.java  ConnectionsImpl.java  Message.java
src/main/java/bgu/spl/net/impl/echo/: EchoProtocolDefault.java  EchoServerMain.java  LineMessageEncoderDecoder.java
src/main/java/bgu/spl/net/srv/: BlockingConnectionHandler.java
src/main/java/bgu/spl/net/srv/bidi/: BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
